--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -19,12 +19,24 @@
     when: cuda_use_runfile
 
   - name: Install CUDA packages (1.5-2GB download, also restarts if cuda_restart_node_on_install is set to True)
+    apt:
+      name: "{{ item }}"
+      state: present
+      allow_downgrade: yes
+    with_items: "{{ cuda_packages }}"
+    register: cuda_packages_installation
+    when: ansible_pkg_mgr == 'apt' and not cuda_use_runfile
+    notify:
+     - ZZ CUDA Restart server
+     - ZZ CUDA Wait for server to restart
+
+  - name: Install CUDA packages (1.5-2GB download, also restarts if cuda_restart_node_on_install is set to True)
     package:
       name: "{{ item }}"
       state: present
     with_items: "{{ cuda_packages }}"
     register: cuda_packages_installation
-    when: not cuda_use_runfile
+    when: not ansible_pkg_mgr == 'apt' and not cuda_use_runfile
     notify:
      - ZZ CUDA Restart server
      - ZZ CUDA Wait for server to restart
