--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -18,6 +18,11 @@
   - include_tasks: install_runfile.yml
     when: cuda_use_runfile
 
+  - name: Remove cuda
+    apt:
+      name: cuda
+      state: absent
+
   - name: Install CUDA packages (1.5-2GB download, also restarts if cuda_restart_node_on_install is set to True)
     apt:
       name: "{{ item }}"
